# imgprobox

./: '  .gitignore  Cargo.toml  README.md  build.sh  deploy.sh  index.html  package-lock.json  package.json  run.sh  run_tests.js  run_tests.py  shell.py  toolbox.js  toolbox.py  webcam.js
frontend/: next.config.js  package-lock.json  package.json
frontend/src/pages/: index.js
frontend/src/pages/components/: Convolutions.js  ExpandableSection.js  Filtering.js  GeometricTransformations.js  Padding.js  SinglePixelOperations.js
frontend/src/styles/: globals.css
react/: App.css  App.jsx  Message.jsx  main.jsx
react/components/: Alert.jsx  ListGroup.jsx
src/: Cargo.toml  binary_spo.rs  convolution.rs  cropping.rs  geometric_spatial_transformations.rs  helpers.rs  histogram.rs  image.rs  lib.rs  neighbourhood_operations.rs  non_linear_filtering.rs  padding.rs  single_pixel_operations.rs
