[package]
name = "without-a-bundler"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'HtmlCanvasElement',
  'Window',
  'ImageData',
  'console',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
